feat: add account controller
